# Rust-Template

./: .gitignore  Cargo.toml  README.md  cr.py  run.py
src/: lib.rs  nums.rs  order.rs  string_proc.rs
src/graph/: mod.rs
src/math/: mod.rs  sieve.rs
src/range_query/: fenwick.rs  mod.rs
src/special/: caching.rs  cheatsheet.rs  mod.rs
tests/: test.rs
